# util_formatted_text

./: CMakeLists.txt
.github/workflows/: pragma-linux-ci.yml  pragma-windows-ci.yml
include/: util_formatted_text.hpp  util_formatted_text_anchor_point.hpp  util_formatted_text_config.hpp  util_formatted_text_line.hpp  util_formatted_text_tag.hpp  util_formatted_text_types.hpp  util_text_line.hpp
src/: util_formatted_text.cpp  util_formatted_text_anchor_point.cpp  util_formatted_text_line.cpp  util_formatted_text_tag.cpp  util_formatted_text_tags.cpp  util_text_line.cpp
src/implementation/: anchor_point.cpp  core.cpp  line.cpp  tag.cpp  tags.cpp  text_line.cpp
src/interface/: anchor_point.cppm  core.cppm  line.cppm  tag.cppm  text_line.cppm  types.cppm  util_formatted_text.cppm
